--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -1,46 +1,46 @@
 extends ../layouts/default
 
-block intro
-	.container
-		h1 About Us
-		
 block content
 	.container
-		p(style='white-space:pre;')
-			| Q: Wat is PixelPub?
-			| A: An awesome gaming community!
-			|
-			| Q: Wat sort of "gaming" does your community take part in?
-			| A: All sorts of games! Videogames, card games, board games, mobile games!
-			|
-			| Q: How do you spell what?
-			| A: Wat?
-			|
-			| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play?
-			| A: That is a great question! Here is a general list of games our community participates in.
-			|
-			| Current Games (as of June 2017):
-			|
-			| - Heroes of the Storm
-			| - The Elder Scrolls Online
-			| - Battlefield 1
-			| - Overwatch
-			| - Diablo 3
-			|
-			| Games incoming to PixelPub:
-			|
-			| - Destiny 2
-			| - Anthem
-			|
-			| Other Games:
-			|
-			| - D&D
-			| - Magic The Gathering
-			|
-			| If your game is not mentioned, start the fire in our community for your game and it may show up on the list!
-			|
-			| Q: This all sounds awesome! How do I become part of this community?
-			| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") youtube], #[a(href="https://www.facebook.com/pixelpub") facebook], #[a(href="https://www.instagram.com/pixelpubtv/") instagram], #[a(href="https://twitter.com/pixelpubtv") twitter]), we would love to hear from you!
-			|
-			| Q: Is it "PixelPub" or "Pixel Pub"?
-			| A: Yes
+		h1 About Us
+		div#aboutBlock
+			p(style='white-space:pre;')
+				| Q: Wat is PixelPub?
+				| A: An awesome gaming community!
+				|
+				| Q: Wat sort of "gaming" does your community take part in?
+				| A: All sorts of games! Videogames, card games, board games, mobile games!
+				|
+				| Q: How do you spell what?
+				| A: Wat?
+				|
+				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play?
+				| A: That is a great question! Here is a general list of games our community participates in.
+				|
+				| Current Games (as of June 2017):
+				|
+				| - Heroes of the Storm
+				| - The Elder Scrolls Online
+				| - Battlefield 1
+				| - Overwatch
+				| - Diablo 3
+				|
+				| Games incoming to PixelPub:
+				|
+				| - Destiny 2
+				| - Anthem
+				|
+				| Other Games:
+				|
+				| - D&D
+				| - Magic The Gathering
+				|
+				| If your game is not mentioned, start the fire in our community for your game!
+				| It may show up on the list one day!
+				|
+				| Q: This all sounds awesome! How do I become part of this community?
+				| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! </br> 
+				| Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") youtube], #[a(href="https://www.facebook.com/pixelpub") facebook], #[a(href="https://www.instagram.com/pixelpubtv/") instagram], #[a(href="https://twitter.com/pixelpubtv") twitter]), we would love to hear from you!
+				|
+				| Q: Is it "PixelPub" or "Pixel Pub"?
+				| A: Yes
