--- a/templates/views/crew.pug
+++ b/templates/views/crew.pug
@@ -11,9 +11,9 @@ block content
 			div#ppProfileTblRow1CellLeft.divTableCell
 				img(src='/images/Andrew_Profile.jpg' title='Bloodrave120 & Wife').ppProfileImg
 			div#ppProfileTblRow1CellRight.divTableCell
-				p.profile-text-block.left Bloodrave120 Co-Founder of PixelPub <br />
+				p.profile-text-block.left Bloodrave120 - Co-Founder of PixelPub <br />
 					| "Gaming is part of my life and I love sharing my gaming experiences with people. <br /> 
-					| My favorite games include: WoW, Destiny, Borderlands 2 and Mass Effect Series. <br />
+					| My favorite game IPs include: WoW, Destiny, Borderlands and Mass Effect. <br />
 					| I also enjoy tabletop and card games like D&D and Magic The Gathering. <br /> 
 					| I hope to see you in-game or on our community #[a(href="https://discord.gg/uw3PMqV") Discord Server]! Happy Gaming!" <br />
 					| Twitter: #[a(href="https://twitter.com/Bloodrave120") @Bloodrave120] | PSN/XBOX/Steam: Bloodrave120 | BattleNet: Bloodrave120#1678
@@ -21,7 +21,7 @@ block content
 			div#ppProfileTblRow2CellLeft.divTableCell
 				img(src='/images/Chris_Profile.jpg' title='Crispy724 & Son').ppProfileImg
 			div#ppProfileTblRow2CellRight.divTableCell
-				p.profile-text-block.left Crispy724 Co-Founder of PixelPub <br />
+				p.profile-text-block.left Crispy724 - Co-Founder of PixelPub <br />
 					| "I'm a programmer by day and a gamer by night. <br /> 
 					| I love the more punishing indie games, and I also love magic the gathering. <br />
 					| Build me a game that incorporates dark souls, magic the gathering, <br /> 
@@ -31,12 +31,22 @@ block content
 			div#ppProfileTblRow3CellLeft.divTableCell
 				img(src='/images/JHomieFunk_Profile.png').ppProfileImg
 			div#ppProfileTblRow3CellRight.divTableCell
-				p.profile-text-block.left PixelPub Community Lead <br /> 
+				p.profile-text-block.left JHomieFunk - PixelPub Community Lead <br /> 
 					| "I have been a gamer pretty much all of my life. <br /> 
 					| I enjoy all types of games from FPS, MMOs, RPG, sandbox, etc. <br /> 
-					| I am new to streaming and hope to bring good content to each of you including an environment of chill and fun. <br />
+					| I am new to streaming and hope to bring good content to each of you, <br /> 
+					| including an environment of chill and fun. <br />
 					| YOU and our community is what is most important to me!" <br />
-					| Twitch: #[a(href="https://www.Twitch.tv/JHomieFunk") JHomieFunk] | Twitter: #[a(href="https://twitter.com/jhomiefunk") @JHomieFunk] 
+					| Twitch: #[a(href="https://www.Twitch.tv/JHomieFunk") JHomieFunk] | Twitter: #[a(href="https://twitter.com/jhomiefunk") @JHomieFunk]
+		div#ppProfileTblRow4.divTableRow.display-none
+			div#ppProfileTblRow4CellLeft.divTableCell
+				img(src='/images/Blaze_Profile.png').ppProfileImg
+			div#ppProfileTblRow4CellRight.divTableCell
+				p.profile-text-block.left Blaze - PixelPub Community Lead <br /> 
+					| "I started The Bad Mama Jamas with a bunch of real life friends. <br /> 
+					| What it has grown into is a form of networking that surpasses any LFG system in any game. <br /> 
+					| I play various different games because this community has allowed me to find friends no matter where I go!" <br />
+					| Twitch: #[a(href="https://www.twitch.tv/tbmj_blaze") tbmj_blaze] | BattleNet: Blaze#14736 | Steam: tbmj_blaze
 	
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
