--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -31,7 +31,7 @@ block content
 	div#picGame1.game-img1.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 RECRUITING GUARDIANS
-	p#descGame1.between-text-block PixelPub is excited for Destiny 2! We will be bringing you day one footage of Destiny 2 along with a new clan! <br />
+	p#descGame1.between-text-block PixelPub is excited for Destiny 2! We will be bringing you day one footage of Destiny 2 along with a new clan #[a(href="https://www.bungie.net/en/Clan/Forum/2050502") "Wrath Incarnate"]! <br />
 		| Help us as we take on the darkness, save the galaxy and get some awesome loot!
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
