--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -124,6 +124,7 @@ div#aboutBlock p {
 	
     .between-text-block {
 		font-size: 200%;
+		margin-bottom: 35px;
 	}
 	
 	.profile-text-block {
@@ -205,6 +206,7 @@ div#aboutBlock p {
 	
 	.profile-text-block {
 		font-size: 120%;
+		margin-top: 10px;
 	}
 	
 	img#ppIntroImg {
@@ -228,6 +230,7 @@ div#aboutBlock p {
 	
 	.profile-text-block {
 		font-size: 100%;
+		margin-top: 10px;
 	}
 	
 	img#ppIntroImg {
@@ -246,6 +249,10 @@ div#aboutBlock p {
 	img.navbar-icon {
 		max-height: 45px;
 	}
+	
+	.game-icons {
+		height: 200px;
+	}
 }
 
 @media only screen and (max-width: 426px), screen and (max-height: 686px) {
@@ -255,11 +262,12 @@ div#aboutBlock p {
 	
     .between-text-block {
 		font-size: 100% !important;
-		height: 135px;
+		height: 90px;
 	}
 	
 	.profile-text-block {
 		font-size: 100% !important;
+		margin-top: 10px;
 	}
 	
 	#ppIntroDesc.profile-text-block {
@@ -271,11 +279,23 @@ div#aboutBlock p {
 	}
 	
 	div#aboutBlock p {
-		font-size: 125% !important;
+		font-size: 90% !important;
 	}
 	
 	.divTableCell {
 		display: inline !important;
+	}
+	
+	.game-icons {
+		height: 100px;
+	}
+	
+	.short {
+		height: 350px;
+	}
+	
+	.long {
+		height: 350px;
 	}
 }
 
@@ -286,7 +306,7 @@ div#aboutBlock p {
 	
     .between-text-block {
 		font-size: 90% !important;
-		height: 180px;
+		height: 90px;
 	}
 	
 	.profile-text-block {
@@ -305,6 +325,18 @@ div#aboutBlock p {
 	.divTableCell {
 		display: inline !important;
 	}
+	
+	.game-icons {
+		height: 100px;
+	}
+	
+	.short {
+		height: 350px;
+	}
+	
+	.long {
+		height: 350px;
+	}
 }
 
 @media only screen and (max-width: 320px), screen and (max-height: 686px) {
@@ -314,7 +346,7 @@ div#aboutBlock p {
 	
     .between-text-block {
 		font-size: 100% !important;
-		height: 180px;
+		height: 110px;
 	}
 	
 	.profile-text-block {
@@ -328,6 +360,18 @@ div#aboutBlock p {
 	
 	.divTableCell {
 		display: inline !important;
+	}
+	
+	.game-icons {
+		height: 100px;
+	}
+	
+	.short {
+		height: 350px;
+	}
+	
+	.long {
+		height: 350px;
 	}
 }
 
