--- a/templates/views/crew.pug
+++ b/templates/views/crew.pug
@@ -52,7 +52,8 @@ block content
 	a(href="https://discord.gg/uw3PMqV")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br /> 
+		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 	
 	script(src='/js/jquery/jquery-3.2.1.min.js')
