--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -9,7 +9,8 @@ block content
 			div#ppIntroTblRow1CellLeft.divTableCell
 				img(src='/images/ppl-1.png')#ppIntroImg
 			div#ppIntroTblRow1CellRight.divTableCell
-				p#ppIntroDesc.profile-text-block.left Welcome to PixelPub! <br />
+				p#ppIntroDesc.profile-text-block.left 
+					| Welcome to PixelPub! <br />
 					| We are a gaming community, one that strives to be fun, <br />
 					| rewarding, and brings gamers together to do what they love most, gaming. <br />
 					| Be a part of our community by joining our #[a(href="https://discord.gg/uw3PMqV") Discord Server]. <br /> <br />
@@ -31,28 +32,35 @@ block content
 	div#picGame1.game-img1.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 RECRUITING GUARDIANS
-	p#descGame1.between-text-block PixelPub is excited for Destiny 2! We will be bringing you day one footage of Destiny 2 along with a new clan #[a(href="https://www.bungie.net/en/Clan/Forum/2050502") "Wrath Incarnate"]! <br />
+	p#descGame1.between-text-block 
+		| PixelPub is excited for Destiny 2! <br />
+		| We will be bringing you day one footage of Destiny 2 along with a new clan #[a(href="https://www.bungie.net/en/Clan/Forum/2050502") "Wrath Incarnate"]! <br />
 		| Help us as we take on the darkness, save the galaxy and get some awesome loot!
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 WORLD OF WARCRAFT
-	p#descGame2.between-text-block PixelPub is glad to be partnered with #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas/") "The Bad Mama Jamas"]. <br/ >
+	p#descGame2.between-text-block 
+		| PixelPub is glad to be partnered with #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas/") "The Bad Mama Jamas"]. <br/ >
 		| TBMJ is a great group of helpful, fun, and skilled gamers. Interested in joining? Awesome! <br />
 		| Post your interest in the #[a(href="https://discord.gg/uw3PMqV") #world_of_warcraft] channel to have an officer message you.
 	div#picGame3.game-img3.parallax.long 
 	a(href="https://discord.gg/uw3PMqV")
 		h1 MAGIC THE GATHERING
-	p#descGame3.between-text-block We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander! <br />
+	p#descGame3.between-text-block 
+		| We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander! <br />
 		| Talk MtG on our #[a(href="https://discord.gg/uw3PMqV") #magic_the_gathering] channel!
 	div#picTwitch.twitch.parallax.long
 	a(href="https://www.twitch.tv/pixelpub")
 		h1 PIXELPUB ON TWITCH
-	p#descTwitch.between-text-block Watch us live on #[a(href="https://www.twitch.tv/pixelpub") Twitch]! <br /> Make sure to say "Hi!" in chat, we love to talk to our twitch chat!
+	p#descTwitch.between-text-block 
+		| Watch us live on #[a(href="https://www.twitch.tv/pixelpub") Twitch]! <br /> 
+		| Make sure to say "Hi!" in chat, we love to talk to our twitch chat!
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br /> 
+		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 	
 	script(src='/js/jquery/jquery-3.2.1.min.js')
