--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -225,11 +225,11 @@ div#aboutBlock p {
 
 @media only screen and (width: 768px), screen and (height: 686px) {
     .between-text-block {
-		font-size: 100%;
+		font-size: 120%;
 	}
 	
 	.profile-text-block {
-		font-size: 100%;
+		font-size: 120%;
 		margin-top: 10px;
 	}
 	
@@ -239,7 +239,7 @@ div#aboutBlock p {
 	}
 	
 	div#aboutBlock p {
-		font-size: 100%;
+		font-size: 120%;
 	}
 	
 	#ppIntroDesc.profile-text-block {
@@ -263,6 +263,7 @@ div#aboutBlock p {
     .between-text-block {
 		font-size: 100% !important;
 		height: 90px;
+		margin-bottom: 20px;
 	}
 	
 	.profile-text-block {
@@ -297,6 +298,11 @@ div#aboutBlock p {
 	.long {
 		height: 350px;
 	}
+	
+	.left {
+		text-align: center !important;
+		padding-left: 0px;
+	}
 }
 
 @media only screen and (max-width: 376px), screen and (max-height: 686px) {
@@ -305,21 +311,22 @@ div#aboutBlock p {
 	}
 	
     .between-text-block {
-		font-size: 90% !important;
+		font-size: 100% !important;
 		height: 90px;
+		margin-bottom: 50px;
 	}
 	
 	.profile-text-block {
-		font-size: 90% !important;
+		font-size: 100% !important;
 		height: 180px;
 	}
 	
 	div#aboutBlock p {
-		font-size: 90% !important;
+		font-size: 100% !important;
 	}
 	
 	#ppIntroDesc.profile-text-block {
-		margin-left: -10px !important;
+		margin-left: 0px !important;
 	}
 	
 	.divTableCell {
@@ -336,6 +343,11 @@ div#aboutBlock p {
 	
 	.long {
 		height: 350px;
+	}
+	
+	.left {
+		text-align: center !important;
+		padding-left: 0px;
 	}
 }
 
@@ -347,11 +359,16 @@ div#aboutBlock p {
     .between-text-block {
 		font-size: 100% !important;
 		height: 110px;
+		margin-bottom: 35px;
 	}
 	
 	.profile-text-block {
 		font-size: 100% !important;
 		height: 180px;
+	}
+	
+	#ppIntroDesc.profile-text-block {
+		margin-left: 0px !important;
 	}
 	
 	div#aboutBlock p {
@@ -372,6 +389,11 @@ div#aboutBlock p {
 	
 	.long {
 		height: 350px;
+	}
+	
+	.left {
+		text-align: center !important;
+		padding-left: 0px;
 	}
 }
 
