--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -4,43 +4,43 @@ block content
 	.container
 		h1 About Us
 		div#aboutBlock
-			p(style='white-space:pre;')
-				| Q: Wat is PixelPub?
-				| A: An awesome gaming community!
-				|
-				| Q: Wat sort of "gaming" does your community take part in?
-				| A: All sorts of games! Videogames, card games, board games, mobile games!
-				|
-				| Q: How do you spell what?
-				| A: Wat?
-				|
-				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play?
-				| A: That is a great question! Here is a general list of games our community participates in.
-				|
-				| Current Games (as of June 2017):
-				|
-				| - Heroes of the Storm
-				| - The Elder Scrolls Online
-				| - Battlefield 1
-				| - Overwatch
-				| - Diablo 3
-				|
-				| Games incoming to PixelPub:
-				|
-				| - Destiny 2
-				| - Anthem
-				|
-				| Other Games:
-				|
-				| - D&D
-				| - Magic The Gathering
-				|
-				| If your game is not mentioned, start the fire in our community for your game!
-				| It may show up on the list one day!
-				|
-				| Q: This all sounds awesome! How do I become part of this community?
-				| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! </br> 
-				| Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") youtube], #[a(href="https://www.facebook.com/pixelpub") facebook], #[a(href="https://www.instagram.com/pixelpubtv/") instagram], #[a(href="https://twitter.com/pixelpubtv") twitter]), we would love to hear from you!
-				|
-				| Q: Is it "PixelPub" or "Pixel Pub"?
+			p
+				| Q: Wat is PixelPub? </br>
+				| A: An awesome gaming community! </br>
+				| </br>
+				| Q: Wat sort of "gaming" does your community take part in? </br>
+				| A: All sorts of games! Videogames, card games, board games, mobile games! </br>
+				| </br>
+				| Q: How do you spell what? </br>
+				| A: Wat? </br>
+				| </br>
+				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play? </br>
+				| A: That is a great question! Here is a general list of games our community participates in. </br>
+				| </br>
+				| Current Games (as of June 2017): </br>
+				| </br>
+				| - Heroes of the Storm </br>
+				| - The Elder Scrolls Online </br>
+				| - Battlefield 1 </br>
+				| - Overwatch </br>
+				| - Diablo 3 </br>
+				| </br>
+				| Games incoming to PixelPub: </br>
+				| </br>
+				| - Destiny 2 </br>
+				| - Anthem </br>
+				| </br>
+				| Other Games: </br>
+				| </br>
+				| - D&D </br>
+				| - Magic The Gathering </br>
+				| </br>
+				| If your game is not mentioned, start the fire in our community for your game! </br>
+				| It may show up on the list one day! </br>
+				| </br>
+				| Q: This all sounds awesome! How do I become part of this community? </br>
+				| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! </br>
+				| Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") youtube], #[a(href="https://www.facebook.com/pixelpub") facebook], #[a(href="https://www.instagram.com/pixelpubtv/") instagram], #[a(href="https://twitter.com/pixelpubtv") twitter]), we would love to hear from you! </br>
+				| </br>
+				| Q: Is it "PixelPub" or "Pixel Pub"? </br>
 				| A: Yes
