--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -44,7 +44,7 @@ img {
 }
 
 .left {
-	text-align: left !important;
+	text-align: left;
 	padding-left: 35px;
 }
 
@@ -112,12 +112,287 @@ div#aboutBlock p {
 	vertical-align: middle;
 }
 
-#ppIntroDesc.profile-text-block {
-	margin-left: -50px;
+/***********************************************************************************************/
+
+@media screen and (min-width: 320px) {
+	h1 {
+		font-size: 190%;
+	}
+	
+    .between-text-block {
+		font-size: 100%;
+		height: 110px;
+		margin-bottom: 35px;
+	}
+	
+	.profile-text-block {
+		font-size: 100%;
+		height: 180px;
+	}
+		
+	div#aboutBlock p {
+		font-size: 100%;
+	}
+	
+	div#ppProfileTbl .divTableCell {
+		display: block;
+	}
+	
+	.game-icons {
+		height: 100px;
+	}
+	
+	#game3Icon {
+		margin-left: 5px;
+	}
+	
+	.short {
+		height: 350px;
+	}
+	
+	.long {
+		height: 350px;
+	}
+	
+	.left {
+		text-align: center;
+		padding-left: 0px;
+	}
 }
 
-/* Adjust Text Size */
-@media only screen and (width: 2560px), screen and (height: 1100px) {
+@media screen and (min-width: 375px) {
+	h1 {
+		font-size: 190%;
+	}
+	
+    .between-text-block {
+		font-size: 100%;
+		height: 90px;
+		margin-bottom: 50px;
+	}
+	
+	.profile-text-block {
+		font-size: 100%;
+		height: 180px;
+	}
+	
+	div#aboutBlock p {
+		font-size: 100%;
+	}
+	
+	div#ppProfileTbl .divTableCell {
+		display: block;
+	}
+		
+	.game-icons {
+		height: 100px;
+	}
+	
+	#game3Icon {
+		margin-left: 10px;
+	}
+	
+	.short {
+		height: 350px;
+	}
+	
+	.long {
+		height: 350px;
+	}
+	
+	.left {
+		text-align: center;
+		padding-left: 0px;
+	}
+}
+
+@media screen and (min-width: 425px) {
+	h1 {
+		font-size: 190%;
+	}
+	
+    .between-text-block {
+		font-size: 100%;
+		height: 90px;
+		margin-bottom: 20px;
+	}
+	
+	.profile-text-block {
+		font-size: 100%;
+		margin-top: 10px;
+	}
+	
+	#game3Icon {
+		margin-left: 10px;
+	}
+		
+	div#aboutBlock p {
+		font-size: 90%;
+	}
+	
+	div#ppProfileTbl .divTableCell {
+		display: block;
+	}
+
+	.game-icons {
+		height: 100px;
+	}
+	
+	.short {
+		height: 350px;
+	}
+	
+	.long {
+		height: 350px;
+	}
+	
+	.left {
+		text-align: center;
+		padding-left: 0px;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	h1 {
+		font-size: 190%;
+	}
+
+    .between-text-block {
+		font-size: 120%;
+	}
+	
+	.profile-text-block {
+		font-size: 120%;
+		margin-top: 10px;
+	}
+	
+	div#ppProfileTbl .divTableCell {
+		display: table-cell;
+	}
+	
+	div#aboutBlock p {
+		font-size: 120%;
+	}
+	
+	img.navbar-icon {
+		max-height: 45px;
+	}
+	
+	.game-icons {
+		height: 200px;
+	}
+	
+	.short {
+		height: 400px;
+	}
+	
+	.long {
+		height: 400px;
+	}
+	
+	.left {
+		text-align: center;
+		padding-left: 0px;
+	}
+}
+
+@media screen and (min-width: 1024px) {
+	h1 {
+		font-size: 250%;
+	}
+
+    .between-text-block {
+		font-size: 120%;
+	}
+	
+	.profile-text-block {
+		font-size: 120%;
+		margin-top: 10px;
+	}
+	
+	div#aboutBlock p {
+		font-size: 120%;
+	}
+	
+	.short {
+		height: 400px;
+	}
+	
+	.long {
+		height: 400px;
+	}
+	
+	.left {
+		text-align: left;
+		padding-left: 20px;
+	}
+}
+
+@media screen and (min-width: 1440px) {
+	h1 {
+		font-size: 250%;
+	}
+
+    .between-text-block {
+		font-size: 150%;
+	}
+	
+	.profile-text-block {
+		font-size: 150%;
+	}
+	
+	#game3Icon {
+		margin-left: 20px;
+	}
+	
+	div#aboutBlock p {
+		font-size: 150%;
+	}
+	
+	.short {
+		height: 400px;
+	}
+	
+	.long {
+		height: 400px;
+	}
+}
+
+@media screen and (min-width: 1920px) {
+	h1 {
+		font-size: 300%;
+	}
+
+    .between-text-block {
+		font-size: 150%;
+	}
+	
+	.profile-text-block {
+		font-size: 150%;
+	}
+	
+	#game3Icon {
+		margin-left: 35px;
+	}
+		
+	div#aboutBlock p {
+		font-size: 150%;
+	}
+	
+	.short {
+		height: 400px;
+	}
+	
+	.long {
+		height: 400px;
+	}
+}
+
+@media screen and (min-width: 2560px) {
+	h1 {
+		font-size: 350%;
+	}
+
 	#descGame2.between-text-block {
 		height: 135px;
 	}
@@ -131,271 +406,41 @@ div#aboutBlock p {
 		font-size: 200%;
 	}
 	
+	#ppIntroImg {
+		margin-left: 600px;
+	}
+	
+	#ppIntroDesc {
+		margin-left: 500px;
+	}
+	
 	#ppIntroTblRow1CellLeft.divTableCell {
 		max-width: 500px
 	}
 	
 	.game-icons {
 		height: 350px;
-		margin-left: 15%;
+		margin-left: 10%;
 	}
 	
-	img#ppIntroImg {
-		margin-left: 600px;
+	#game3Icon {
+		margin-left: 50px;
 	}
 	
 	div#aboutBlock p {
 		font-size: 200%;
 	}
 	
-	#ppIntroDesc.profile-text-block {
-		margin-left: 300px !important;
-	}
-}
-
-@media only screen and (max-width: 1920px), screen and (height: 1080px) {
-    .between-text-block {
-		font-size: 150%;
-	}
-	
-	.profile-text-block {
-		font-size: 150%;
-	}
-	
-	img#ppIntroImg {
-		max-height: 250px;
-		margin-left: 150px;
-	}
-	
-	div#aboutBlock p {
-		font-size: 150%;
-	}
-	
-	#ppIntroDesc.profile-text-block {
-		margin-left: -50px !important;
-	}
-}
-
-@media only screen and (max-width: 1441px), screen and (height: 686px) {
-    .between-text-block {
-		font-size: 150%;
-	}
-	
-	.profile-text-block {
-		font-size: 150%;
-	}
-	
-	img#ppIntroImg {
-		max-height: 250px;
-		margin-left: 150px;
-	}
-	
-	div#aboutBlock p {
-		font-size: 150%;
-	}
-	
-	#ppIntroDesc.profile-text-block {
-		margin-left: -50px !important;
-	}
-}
-
-@media only screen and (width: 1024px), screen and (height: 686px) {
-    .between-text-block {
-		font-size: 120%;
-	}
-	
-	.profile-text-block {
-		font-size: 120%;
-		margin-top: 10px;
-	}
-	
-	img#ppIntroImg {
-		max-height: 150px;
-		margin-left: 125px;
-	}
-	
-	div#aboutBlock p {
-		font-size: 120%;
-	}
-	
-	#ppIntroDesc.profile-text-block {
-		margin-left: -50px !important;
-	}
-}
-
-@media only screen and (width: 768px), screen and (height: 686px) {
-    .between-text-block {
-		font-size: 120%;
-	}
-	
-	.profile-text-block {
-		font-size: 120%;
-		margin-top: 10px;
-	}
-	
-	img#ppIntroImg {
-		max-height: 100px;
-		margin-left: 100px;
-	}
-	
-	div#aboutBlock p {
-		font-size: 120%;
-	}
-	
-	#ppIntroDesc.profile-text-block {
-		margin-left: 50px !important;
-	}
-	
-	img.navbar-icon {
-		max-height: 45px;
-	}
-	
-	.game-icons {
-		height: 200px;
-	}
-}
-
-@media only screen and (max-width: 426px), screen and (max-height: 686px) {
-	h1 {
-		font-size: 190% !important;
-	}
-	
-    .between-text-block {
-		font-size: 100% !important;
-		height: 90px;
-		margin-bottom: 20px;
-	}
-	
-	.profile-text-block {
-		font-size: 100% !important;
-		margin-top: 10px;
-	}
-	
-	#ppIntroDesc.profile-text-block {
-		margin-left: 0px !important;
-	}
-	
-	img#ppIntroImg {
-		display: none;
-	}
-	
-	div#aboutBlock p {
-		font-size: 90% !important;
-	}
-	
-	.divTableCell {
-		display: inline !important;
-	}
-	
-	.game-icons {
-		height: 100px;
-	}
-	
 	.short {
-		height: 350px;
+		height: 800px;
 	}
 	
 	.long {
-		height: 350px;
-	}
-	
-	.left {
-		text-align: center !important;
-		padding-left: 0px;
+		height: 800px;
 	}
 }
 
-@media only screen and (max-width: 376px), screen and (max-height: 686px) {
-	h1 {
-		font-size: 190% !important;
-	}
-	
-    .between-text-block {
-		font-size: 100% !important;
-		height: 90px;
-		margin-bottom: 50px;
-	}
-	
-	.profile-text-block {
-		font-size: 100% !important;
-		height: 180px;
-	}
-	
-	div#aboutBlock p {
-		font-size: 100% !important;
-	}
-	
-	#ppIntroDesc.profile-text-block {
-		margin-left: 0px !important;
-	}
-	
-	.divTableCell {
-		display: inline !important;
-	}
-	
-	.game-icons {
-		height: 100px;
-	}
-	
-	.short {
-		height: 350px;
-	}
-	
-	.long {
-		height: 350px;
-	}
-	
-	.left {
-		text-align: center !important;
-		padding-left: 0px;
-	}
-}
-
-@media only screen and (max-width: 320px), screen and (max-height: 686px) {
-	h1 {
-		font-size: 190% !important;
-	}
-	
-    .between-text-block {
-		font-size: 100% !important;
-		height: 110px;
-		margin-bottom: 35px;
-	}
-	
-	.profile-text-block {
-		font-size: 100% !important;
-		height: 180px;
-	}
-	
-	#ppIntroDesc.profile-text-block {
-		margin-left: 0px !important;
-	}
-	
-	div#aboutBlock p {
-		font-size: 100% !important;
-	}
-	
-	.divTableCell {
-		display: inline !important;
-	}
-	
-	.game-icons {
-		height: 100px;
-	}
-	
-	.short {
-		height: 350px;
-	}
-	
-	.long {
-		height: 350px;
-	}
-	
-	.left {
-		text-align: center !important;
-		padding-left: 0px;
-	}
-}
+/***********************************************************************************************/
 
 .ppb-1 {
 	background-image: url('/images/ppb-1.jpg');
@@ -410,12 +455,12 @@ div#aboutBlock p {
 }
 
 .game-img2 {
-	background-image: url('/images/wow-legion-press-1.jpg');
+	background-image: url('/images/PUBG1.jpg');
 	background-size: 100%;
 }
 
 .game-img3 {
-	background-image: url('/images/mtg-press-1.jpg');
+	background-image: url('/images/PocketCasts_Banner.png');
 	background-size: 100%;
 }
 
