--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -17,13 +17,12 @@ block content
 				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play? </br>
 				| A: That is a great question! Here is a general list of games our community participates in. </br>
 				| </br>
-				| Current Games (as of June 2017): </br>
+				| Current Games (as of August 2017): </br>
 				| </br>
+				| - PLAYERUNKNOWN'S BATTLEGROUNDS </br>
 				| - Heroes of the Storm </br>
 				| - The Elder Scrolls Online </br>
-				| - Battlefield 1 </br>
 				| - Overwatch </br>
-				| - Diablo 3 </br>
 				| </br>
 				| Games incoming to PixelPub: </br>
 				| </br>
