--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -21,9 +21,9 @@ block content
 			td
 				img(src='/images/d2-logo-press-1.png')#game1Icon
 			td
-				img(src='/images/wow-legion-logo-press-1.png')#game2Icon
+				img(src='/images/PUBG_Logo_1.png')#game2Icon
 			td
-				img(src='/images/mtg-logo-press-1.png')#game3Icon
+				img(src='/images/PocketCasts_Logo.png')#game3Icon
 			td
 				img(src='/images/twitch-logo-1.png')#twitchIcon
 			td
@@ -38,17 +38,18 @@ block content
 		| Help us as we take on the darkness, save the galaxy and get some awesome loot!
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
-		h1 WORLD OF WARCRAFT
+		h1 PLAYERUNKNOWN'S BATTLEGROUNDS
 	p#descGame2.between-text-block 
-		| PixelPub is glad to be partnered with #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas/") "The Bad Mama Jamas"]. <br/ >
-		| TBMJ is a great group of helpful, fun, and skilled gamers. Interested in joining? Awesome! <br />
-		| Post your interest in the #[a(href="https://discord.gg/uw3PMqV") #world_of_warcraft] channel to have an officer message you.
+		| PUBG is battle royale arena shooter. 100 in 1 survives. <br />
+		| The PixelPub community has players diving into this game for it's high adrenaline action and fun experiences. <br />
+		| Join in the fun! Team up with our community and get that chicken dinner!
 	div#picGame3.game-img3.parallax.long 
-	a(href="https://discord.gg/uw3PMqV")
-		h1 MAGIC THE GATHERING
+	a(href="http://pca.st/Udap")
+		h1 We Talk Nerd Podcast
 	p#descGame3.between-text-block 
-		| We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander! <br />
-		| Talk MtG on our #[a(href="https://discord.gg/uw3PMqV") #magic_the_gathering] channel!
+		| Tune into Brandon, Jared and Andrew as they talk about current nerd culture. <br />
+		| Every week we dive into subjects like games, movies, tv and news! <br />
+		| You can find us on #[a(href="http://pca.st/Udap") Pocket Casts], #[a(href="https://itunes.apple.com/us/podcast/we-talk-nerd/id1271123859?mt=2") iTunes], #[a(href="https://soundcloud.com/brandon-janow") SoundCloud] and #[a(href="https://www.youtube.com/playlist?list=PLJr6VM66XZJ6W8LqWQIdrhlVNaEl4wHVL") Youtube]!
 	div#picTwitch.twitch.parallax.long
 	a(href="https://www.twitch.tv/pixelpub")
 		h1 PIXELPUB ON TWITCH
