more css changes

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -341,6 +341,18 @@ div#aboutBlock p {
 		font-size: 150%;
 	}
 	
+	#ppIntroTblRow1CellLeft.divTableCell {
+		width: 500px;
+	}
+	
+	#ppIntroImg {
+		margin-left: 200px;
+	}
+	
+	#ppIntroDesc {
+		margin-left: 100px;
+	}
+	
 	#game3Icon {
 		margin-left: 20px;
 	}
@@ -350,11 +362,11 @@ div#aboutBlock p {
 	}
 	
 	.short {
-		height: 400px;
+		height: 500px;
 	}
 	
 	.long {
-		height: 400px;
+		height: 600px;
 	}
 }
 
@@ -371,6 +383,18 @@ div#aboutBlock p {
 		font-size: 150%;
 	}
 	
+	#ppIntroTblRow1CellLeft.divTableCell {
+		width: 500px;
+	}
+	
+	#ppIntroImg {
+		margin-left: 400px;
+	}
+	
+	#ppIntroDesc {
+		margin-left: 300px;
+	}
+	
 	#game3Icon {
 		margin-left: 35px;
 	}
@@ -380,11 +404,11 @@ div#aboutBlock p {
 	}
 	
 	.short {
-		height: 400px;
+		height: 700px;
 	}
 	
 	.long {
-		height: 400px;
+		height: 700px;
 	}
 }
 
@@ -406,16 +430,16 @@ div#aboutBlock p {
 		font-size: 200%;
 	}
 	
+	#ppIntroTblRow1CellLeft.divTableCell {
+		width: 500px;
+	}
+	
 	#ppIntroImg {
-		margin-left: 600px;
+		margin-left: 700px;
 	}
 	
 	#ppIntroDesc {
-		margin-left: 500px;
-	}
-	
-	#ppIntroTblRow1CellLeft.divTableCell {
-		max-width: 500px
+		margin-left: 400px;
 	}
 	
 	.game-icons {
