adding crew profile, css updates

--- a/templates/views/crew.pug
+++ b/templates/views/crew.pug
@@ -47,6 +47,15 @@ block content
 					| What it has grown into is a form of networking that surpasses any LFG system in any game. <br /> 
 					| I play various different games because this community has allowed me to find friends no matter where I go!" <br />
 					| Twitch: #[a(href="https://www.twitch.tv/tbmj_blaze") tbmj_blaze] | BattleNet: Blaze#14736 | Steam: tbmj_blaze
+		div#ppProfileTblRow5.divTableRow.display-none
+			div#ppProfileTblRow5CellLeft.divTableCell
+				img(src='/images/Brandon_Profile.jpg').ppProfileImg
+			div#ppProfileTblRow5CellRight.divTableCell
+				p.profile-text-block.left Aebop - PixelPub Community Lead <br /> 
+					| "I am a Co-Founder of The Bad Mama Jamas gaming community. <br />
+					| I’m a variety gamer from screen to table top and movie enthusiast. <br /> 
+					| I consider myself a historian for gaming lore." <br />
+					| Twitch/YouTube/Steam: Aebop | BattleNet: Aebop#1323 | XBL: xELITExGAMERx70 | PSN: xELITExGAMERx65
 	
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
