--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -256,6 +256,10 @@ div#aboutBlock p {
 	h1 {
 		font-size: 190%;
 	}
+	
+	div#ppProfileTblRow5CellLeft img.ppProfileImg {
+		margin-bottom: 50px;
+	}
 
     .between-text-block {
 		font-size: 120%;
@@ -300,6 +304,10 @@ div#aboutBlock p {
 	h1 {
 		font-size: 250%;
 	}
+	
+	div#ppProfileTblRow5CellLeft img.ppProfileImg {
+		margin-bottom: 50px;
+	}
 
     .between-text-block {
 		font-size: 120%;
@@ -331,6 +339,10 @@ div#aboutBlock p {
 @media screen and (min-width: 1440px) {
 	h1 {
 		font-size: 250%;
+	}
+	
+	div#ppProfileTblRow5CellLeft img.ppProfileImg {
+		margin-bottom: 50px;
 	}
 
     .between-text-block {
@@ -373,6 +385,10 @@ div#aboutBlock p {
 @media screen and (min-width: 1920px) {
 	h1 {
 		font-size: 300%;
+	}
+	
+	div#ppProfileTblRow5CellLeft img.ppProfileImg {
+		margin-bottom: 50px;
 	}
 
     .between-text-block {
