youtube meta tag, update destiny clan information

--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -8,6 +8,7 @@ html
 		meta(charset="utf-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
+		meta(name="google-site-verification" content="8PZqor_FGjX0yLgmo0GAXh8-PeznPmV28m8Sd7tDx5E")
 
 		title= title || 'PixelPub'
 		<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
