--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -30,12 +30,12 @@ block content
 				img(src='/images/discord-logo-press-1.png')#discordIcon
 			
 	div#picGame1.game-img1.parallax.long
-	a(href="https://discord.gg/uw3PMqV")
+	a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
-		| PixelPub is excited for Destiny 2! <br />
-		| We will be bringing you day one footage of Destiny 2 along with a new clan #[a(href="https://www.bungie.net/en/Clan/Forum/2050502") "Wrath Incarnate"]! <br />
-		| Help us as we take on the darkness, save the galaxy and get some awesome loot!
+		| Wrath Incarnate is recruiting all guardians! <br />
+		| Find your platform below and request to join today! <br />
+		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] XB1: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III]
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 PLAYERUNKNOWN'S BATTLEGROUNDS
