--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -82,6 +82,9 @@ html
 							table
 								tr
 									td
+										<a href="http://www.pixelpubgaming.com/rss/pxprss.xml" target="_blank">
+											img(src='/images/rss.png').navbar-icon
+									td
 										<a href="https://www.youtube.com/c/pixelpub" target="_blank">
 											img(src='/images/youtube.png').navbar-icon
 									td
@@ -117,6 +120,9 @@ html
 			
 			table.center
 				tr
+					td
+						<a href="http://www.pixelpubgaming.com/rss/pxprss.xml" target="_blank">
+							img(src='/images/rss.png')
 					td
 						<a href="https://www.youtube.com/c/pixelpub" target="_blank">
 							img(src='/images/youtube.png')
