alter crew page, show on load

--- a/templates/views/crew.pug
+++ b/templates/views/crew.pug
@@ -7,7 +7,7 @@ block content
 	h1 PIXELPUB CREW
 	
 	div#ppProfileTbl.divTable
-		div#ppProfileTblRow1.divTableRow.display-none
+		div#ppProfileTblRow1.divTableRow
 			div#ppProfileTblRow1CellLeft.divTableCell
 				img(src='/images/Andrew_Profile.jpg' title='Bloodrave120 & Wife').ppProfileImg
 			div#ppProfileTblRow1CellRight.divTableCell
@@ -17,7 +17,7 @@ block content
 					| I also enjoy tabletop and card games like D&D and Magic The Gathering. <br /> 
 					| I hope to see you in-game or on our community #[a(href="https://discord.gg/uw3PMqV") Discord Server]! Happy Gaming!" <br />
 					| Twitter: #[a(href="https://twitter.com/Bloodrave120") @Bloodrave120] | PSN/XBOX/Steam: Bloodrave120 | BattleNet: Bloodrave120#1678
-		div#ppProfileTblRow2.divTableRow.display-none
+		div#ppProfileTblRow2.divTableRow
 			div#ppProfileTblRow2CellLeft.divTableCell
 				img(src='/images/Chris_Profile.jpg' title='Crispy724 & Son').ppProfileImg
 			div#ppProfileTblRow2CellRight.divTableCell
@@ -27,7 +27,7 @@ block content
 					| Build me a game that incorporates dark souls, magic the gathering, <br /> 
 					| and rogue legacy and I'd never play anything else." <br />
 					| Twitter: #[a(href="https://twitter.com/Crispy724") @Crispy724]
-		div#ppProfileTblRow3.divTableRow.display-none
+		div#ppProfileTblRow3.divTableRow
 			div#ppProfileTblRow3CellLeft.divTableCell
 				img(src='/images/Blaze_Profile.png').ppProfileImg
 			div#ppProfileTblRow3CellRight.divTableCell
@@ -36,7 +36,7 @@ block content
 					| What it has grown into is a form of networking that surpasses any LFG system in any game. <br /> 
 					| I play various different games because this community has allowed me to find friends no matter where I go!" <br />
 					| Twitch: #[a(href="https://www.twitch.tv/tbmj_blaze") tbmj_blaze] | BattleNet: Blaze#14736 | Steam: tbmj_blaze
-		div#ppProfileTblRow4.divTableRow.display-none
+		div#ppProfileTblRow4.divTableRow
 			div#ppProfileTblRow4CellLeft.divTableCell
 				img(src='/images/Brandon_Profile.jpg').ppProfileImg
 			div#ppProfileTblRow4CellRight.divTableCell
