--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -42,7 +42,7 @@ img {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #f00;
   -webkit-transition: .4s;
   transition: .4s;
 }
