--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -57,9 +57,9 @@ block content
 					| You can find us on #[a(href="http://pca.st/Udap") Pocket Casts], #[a(href="https://itunes.apple.com/us/podcast/we-talk-nerd/id1271123859?mt=2") iTunes], #[a(href="https://soundcloud.com/brandon-janow") SoundCloud] and #[a(href="https://www.youtube.com/playlist?list=PLJr6VM66XZJ6W8LqWQIdrhlVNaEl4wHVL") YouTube]!
 		div.divTableRow
 			div#mediaCell.divTableCell
-				label(title='Play/Pause Latest Episode').switch
-					input(id='playSlider' type='checkbox')
-					span.slider.round
+				label(id='switchLbl' title='Loading Latest Episode...').switch
+					input(id='playSlider' type='checkbox' disabled)
+					span(id='classSlider').slider.round
 				div(id='player')
 					img(id='play' src='/images/play.png' width='100' height='100' style='display:none;')
 					img(id='pause' src='/images/pause.png' width='100' height='100' style='display:none;')
