--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -54,7 +54,7 @@ block content
 				p#descGame3.between-text-block
 					| Tune in as Brandon, Jared and Andrew talk about current nerd culture. <br />
 					| Every week we dive into subjects like games, movies, tv and more! <br />
-					| You can find us on #[a(href="http://pca.st/Udap") Pocket Casts], #[a(href="https://itunes.apple.com/us/podcast/we-talk-nerd/id1271123859?mt=2") iTunes], #[a(href="https://soundcloud.com/brandon-janow") SoundCloud] and #[a(href="https://www.youtube.com/playlist?list=PLJr6VM66XZJ6W8LqWQIdrhlVNaEl4wHVL") YouTube]!
+					| You can find us on #[a(href="http://pca.st/Udap") Pocket Casts], #[a(href="https://itunes.apple.com/us/podcast/we-talk-nerd/id1271123859?mt=2") iTunes], #[a(href="https://soundcloud.com/wtnpodcast") SoundCloud] and #[a(href="https://www.youtube.com/playlist?list=PLJr6VM66XZJ6W8LqWQIdrhlVNaEl4wHVL") YouTube]!
 		div.divTableRow
 			div#mediaCell.divTableCell
 				label(id='switchLbl' title='Loading Latest Episode...').switch
