--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -35,7 +35,7 @@ block content
 	p#descGame1.between-text-block 
 		| Wrath Incarnate is recruiting all guardians! <br />
 		| Find your platform below and request to join today! <br />
-		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] & #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") Wrath Incarnate IV] | XB1: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] | PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III] & #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") Wrath Incarnate V]
+		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") Wrath Incarnate IV] | PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") Wrath Incarnate V]
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 PLAYERUNKNOWN'S BATTLEGROUNDS
