update keystone, change about page

--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -17,22 +17,14 @@ block content
 				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play? </br>
 				| A: That is a great question! Here is a general list of games our community participates in. </br>
 				| </br>
-				| Current Games (as of October 2017): </br>
+				| Current Games (as of November 2017): </br>
 				| </br>
 				| - Destiny 2 </br>
-				| - PLAYERUNKNOWN'S BATTLEGROUNDS </br>
-				| - Heroes of the Storm </br>
-				| - The Elder Scrolls Online </br>
-				| - Overwatch </br>
+				| - World of Warcraft </br>
 				| </br>
 				| Games incoming to PixelPub: </br>
 				| </br>
 				| - Anthem </br>
-				| </br>
-				| Other Games: </br>
-				| </br>
-				| - D&D </br>
-				| - Magic The Gathering </br>
 				| </br>
 				| If your game is not mentioned, start the fire in our community for your game! </br>
 				| It may show up on the list one day! </br>
