change frontpage to add world of warcraft, clean up unused files

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -572,7 +572,7 @@ div#aboutBlock p {
 }
 
 .game-img2 {
-	background-image: url('/images/PUBG1.jpg');
+	background-image: url('/images/wow-battle-for-azeroth-banner-press-kit-1.jpg');
 	background-size: 100%;
 }
 
