--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -21,6 +21,7 @@ block content
 				| </br>
 				| - Destiny 2 </br>
 				| - World of Warcraft </br>
+				| - League of Legends </br>
 				| </br>
 				| Games incoming to PixelPub: </br>
 				| </br>
