--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -21,7 +21,7 @@ block content
 			td
 				img(src='/images/d2-logo-press-1.png')#game1Icon
 			td
-				img(src='/images/PUBG_Logo_1.png')#game2Icon
+				img(src='/images/wow-battle-for-azeroth-logo-press-1-small.png')#game2Icon
 			td
 				img(src='/images/PocketCasts_Logo.png')#game3Icon
 			td
@@ -35,14 +35,14 @@ block content
 	p#descGame1.between-text-block 
 		| Wrath Incarnate is recruiting all guardians! <br />
 		| Find your platform below and request to join today! <br />
-		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") Wrath Incarnate IV] | PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") Wrath Incarnate V]
+		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") Wrath Incarnate IV] | PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") Wrath Incarnate V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") Wrath Incarnate VI] 
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
-		h1 PLAYERUNKNOWN'S BATTLEGROUNDS
+		h1 FOR THE ALLIANCE
 	p#descGame2.between-text-block 
-		| PUBG is a battle royale arena shooter. 100 in 1 survives. <br />
-		| The PixelPub community has players diving into this game for it's high adrenaline action and fun experiences. <br />
-		| Join in the fun! Team up with our community and get that chicken dinner!
+		| PixelPub is proud to represent #[a(href="http://us.battle.net/wow/en/guild/sargeras/The_Bad_Mama_Jamas/") The Bad Mama Jamas] as our World of Warcraft clan! <br />
+		| To prepare for the new expansion "Battle for Azeroth", we are recruiting all players to our guild on Sargeras-Alliance! <br />
+		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/uw3PMqV") Discord] and talk to a recruiter today!
 	div#picGame3.game-img3.parallax.long
 	div.divTable
 		div.divTableRow
