added another clan :D

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -33,9 +33,9 @@ block content
 	a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
-		| Wrath Incarnate is recruiting all guardians! <br />
-		| Find your platform below and request to join today! <br />
-		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") Wrath Incarnate IV] | PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") Wrath Incarnate V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") Wrath Incarnate VI] 
+		| Wrath Incarnate is recruiting all guardians! Find your platform below and request to join today! <br />
+		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") Wrath Incarnate IV] <br /> 
+		| PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") Wrath Incarnate V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") Wrath Incarnate VI] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2904541") Wrath Incarnate VII] 
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 FOR THE ALLIANCE
