--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -34,8 +34,8 @@ block content
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
 		| Wrath Incarnate is recruiting all guardians! Find your platform below and request to join today! <br />
-		| PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") Wrath Incarnate] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") Wrath Incarnate IV] <br /> 
-		| PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") Wrath Incarnate II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") Wrath Incarnate III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") Wrath Incarnate V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") Wrath Incarnate VI] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2904541") Wrath Incarnate VII] 
+		| Wrath Incarnate PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") I] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") IV] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2910406") X] <br /> 
+		| Wrath Incarnate PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") VI] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2904541") VII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909553") VIII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909749") IX]
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 FOR THE ALLIANCE
