new pc wrath incarnate clan and update future games

--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -22,9 +22,12 @@ block content
 				| - Destiny 2 </br>
 				| - World of Warcraft </br>
 				| - League of Legends </br>
+				| - Minecraft </br>
+				| - Warframe </br>
 				| </br>
 				| Games incoming to PixelPub: </br>
 				| </br>
+				| - Monster Hunter: World </br>
 				| - Anthem </br>
 				| </br>
 				| If your game is not mentioned, start the fire in our community for your game! </br>
