--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -35,7 +35,7 @@ block content
 	p#descGame1.between-text-block 
 		| Wrath Incarnate is recruiting all guardians! Find your platform below and request to join today! <br />
 		| Wrath Incarnate PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") I] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") IV] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2910406") X] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2929325") XII] <br /> 
-		| Wrath Incarnate PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") VI] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2904541") VII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909553") VIII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909749") IX] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2929300") XI]
+		| Wrath Incarnate PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") VI] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2904541") VII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909553") VIII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909749") IX] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2929300") XI] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2940346") XIII]
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 FOR THE ALLIANCE
