update wrath incarnate main page

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -33,9 +33,9 @@ block content
 	a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
-		| Wrath Incarnate is recruiting all guardians! Find your platform below and request to join today! <br />
-		| Wrath Incarnate PS4: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2050502") I] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2698396") IV] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2910406") X] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2929325") XII] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2942063") XIV] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2947073") XVII] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2947089") XVIII] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2952790") XXIII] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2952807") XXIV] <br /> 
-		| Wrath Incarnate PC: #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595877") II] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2595944") III] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2810613") V] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2891598") VI] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2904541") VII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909553") VIII] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2909749") IX] / #[a(href="https://www.bungie.net/en/ClanV2?groupid=2929300") XI] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2940346") XIII] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2942112") XV]  / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2946133") XVI]  / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2947110") XIX]  / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2947456") XX] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2951287") XXI] / #[a(href="https://www.bungie.net/en/ClanV2?groupId=2951450") XXII]
+		| Looking for a large, active and rewarding Destiny 2 community? Join Wrath Incarnate! <br />
+		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of Osiris! <br />
+		| Click the link #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") here] for our clan list and join today!
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 FOR THE ALLIANCE
