ep 22 wtn podcast

--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -17,10 +17,12 @@ block content
 				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play? </br>
 				| A: That is a great question! Here is a general list of games our community participates in. </br>
 				| </br>
-				| Current Games (as of November 2017): </br>
+				| Current Games (as of 2018): </br>
 				| </br>
 				| - Destiny 2 </br>
 				| - World of Warcraft </br>
+				| - PUBG </br>
+				| - Overwatch </br>
 				| - League of Legends </br>
 				| - Minecraft </br>
 				| - Warframe </br>
@@ -28,6 +30,7 @@ block content
 				| Games incoming to PixelPub: </br>
 				| </br>
 				| - Monster Hunter: World </br>
+				| - Borderlands 3 </br>
 				| - Anthem </br>
 				| </br>
 				| If your game is not mentioned, start the fire in our community for your game! </br>
