add rob to the crew, about changes, wtn podcast ep. 23

--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -21,15 +21,16 @@ block content
 				| </br>
 				| - Destiny 2 </br>
 				| - World of Warcraft </br>
+				| - ARK: Survival Evolved (Community Server) </br>
+				| - Minecraft (Community Server) </br>
+				| - Monster Hunter: World </br>
 				| - PUBG </br>
 				| - Overwatch </br>
 				| - League of Legends </br>
-				| - Minecraft </br>
 				| - Warframe </br>
 				| </br>
 				| Games incoming to PixelPub: </br>
 				| </br>
-				| - Monster Hunter: World </br>
 				| - Borderlands 3 </br>
 				| - Anthem </br>
 				| </br>
