--- a/templates/views/crew.pug
+++ b/templates/views/crew.pug
@@ -11,7 +11,7 @@ block content
 			div#ppProfileTblRow1CellLeft.divTableCell
 				img(src='/images/Andrew_Profile.jpg' title='Bloodrave120 & Wife').ppProfileImg
 			div#ppProfileTblRow1CellRight.divTableCell
-				p.profile-text-block.left Bloodrave120 - Co-Founder of PixelPub <br />
+				p.profile-text-block.left Bloodrave120 - Co-Founder of PixelPub / Leader of Wrath Incarnate / WTN Host <br />
 					| "Gaming is part of my life and I love sharing my gaming experiences with people. <br /> 
 					| My favorite game IPs include: WoW, Destiny, Borderlands and Mass Effect. <br />
 					| I also enjoy tabletop and card games like D&D and Magic The Gathering. <br /> 
@@ -31,7 +31,7 @@ block content
 			div#ppProfileTblRow3CellLeft.divTableCell
 				img(src='/images/Blaze_Profile.png').ppProfileImg
 			div#ppProfileTblRow3CellRight.divTableCell
-				p.profile-text-block.left Blaze - PixelPub Community Lead <br /> 
+				p.profile-text-block.left Blaze - TBMJ Guild Leader / WTN Host <br /> 
 					| "I started The Bad Mama Jamas with a bunch of real life friends. <br /> 
 					| What it has grown into is a form of networking that surpasses any LFG system in any game. <br /> 
 					| I play various different games because this community has allowed me to find friends no matter where I go!" <br />
@@ -40,11 +40,19 @@ block content
 			div#ppProfileTblRow4CellLeft.divTableCell
 				img(src='/images/Brandon_Profile.jpg').ppProfileImg
 			div#ppProfileTblRow4CellRight.divTableCell
-				p.profile-text-block.left Aebop - PixelPub Community Lead <br /> 
+				p.profile-text-block.left Aebop - WTN Host <br /> 
 					| "I am a Co-Founder of The Bad Mama Jamas gaming community. <br />
 					| I’m a variety gamer from screen to table top and movie enthusiast. <br /> 
 					| I consider myself a historian for gaming lore." <br />
 					| Twitch/YouTube/Steam: Aebop | BattleNet: Aebop#1323 | XBL: xELITExGAMERx70 | PSN: xELITExGAMERx65
+		div#ppProfileTblRow5.divTableRow
+			div#ppProfileTblRow4CellLeft.divTableCell
+				img(src='/images/Rob.jpg').ppProfileImg
+			div#ppProfileTblRow4CellRight.divTableCell
+				p.profile-text-block.left Froham - WTN Host <br /> 
+					| "I write code for money and spend free time keeping up with as much nerd content as I can. <br />
+					| Talk to me about comics, movies, TV shows, role playing games, legacy board games and walking simulators." <br />
+					| Xbox: Fro | Battle.net: Froham#1436
 	
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
