frontpage wow guild changes / crew changes

--- a/templates/views/crew.pug
+++ b/templates/views/crew.pug
@@ -31,7 +31,7 @@ block content
 			div#ppProfileTblRow3CellLeft.divTableCell
 				img(src='/images/Blaze_Profile.png').ppProfileImg
 			div#ppProfileTblRow3CellRight.divTableCell
-				p.profile-text-block.left Blaze - TBMJ Guild Leader / WTN Host <br /> 
+				p.profile-text-block.left Blaze - TBMJ Guild Leader <br /> 
 					| "I started The Bad Mama Jamas with a bunch of real life friends. <br /> 
 					| What it has grown into is a form of networking that surpasses any LFG system in any game. <br /> 
 					| I play various different games because this community has allowed me to find friends no matter where I go!" <br />
