--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -37,11 +37,11 @@ block content
 		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of Osiris! <br />
 		| Click the link #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") here] for our clan list and join today!
 	div#picGame2.game-img2.parallax.long
-	a(href="https://discord.gg/uw3PMqV")
-		h1 FOR THE ALLIANCE
+	a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas")
+		h1 BATTLE FOR AZEROTH
 	p#descGame2.between-text-block 
-		| PixelPub is proud to represent #[a(href="http://us.battle.net/wow/en/guild/sargeras/The_Bad_Mama_Jamas/") The Bad Mama Jamas] as our World of Warcraft clan! <br />
-		| To prepare for the new expansion "Battle for Azeroth", we are recruiting all players to our guild on Sargeras-Alliance! <br />
+		| PixelPub is proud to represent #[a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft clan! <br />
+		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on Sargeras-Alliance & Bleeding Hollow-Horde! <br />
 		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/uw3PMqV") Discord] and talk to a recruiter today!
 	div#picGame3.game-img3.parallax.long
 	div.divTable
